test/expressions/diten/uintBinaryOverflow.good
uintBinaryOverflow.chpl:1: syntax error: error building numeric literal: integer literal overflow: '0b10000000000000000000000000000000000000000000000000000000000000000' is too big for type 'uint64'
